--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "@pixi/sound": "^4.0.6",
     "pixi.js": "^6.2.0",
     "reflect-metadata": "^0.1.13",
-    "typedi": "^0.10.0"
+    "typedi": "^0.10.0",
+    "axios": "^0.21.4"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.29.1",
