--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "eslint": "^7.32.0",
     "html-webpack-plugin": "^5.5.0",
     "husky": "^7.0.0",
+    "json2typescript": "^1.5.0-rc.0",
     "prettier": "2.2.1",
     "ts-loader": "^8.3.0",
     "tsconfig-paths-webpack-plugin": "^3.5.2",
