--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/index.js",
   "scripts": {
     "test": "jest",
-    "start": "webpack serve --open --config webpack.dev.js",
+    "start": "webpack serve --open --config webpack.dev.js --host conquiztador.local",
     "build": "webpack --config webpack.prod.js",
     "linter-check": "eslint . --ext .js,.jsx,.ts,.tsx",
     "linter-fix": "eslint . --ext .js,.jsx,.ts,.tsx --fix",
