--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Conquiztador App",
   "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "webpack serve --open --config webpack.dev.js",
     "build": "webpack --config webpack.prod.js",
     "linter-check": "eslint . --ext .js,.jsx,.ts,.tsx",
@@ -33,8 +33,10 @@
     "eslint": "^7.32.0",
     "html-webpack-plugin": "^5.5.0",
     "husky": "^7.0.0",
+    "jest": "^27.5.1",
     "json2typescript": "^1.5.0-rc.0",
     "prettier": "2.2.1",
+    "ts-jest": "^27.1.3",
     "ts-loader": "^8.3.0",
     "tsconfig-paths-webpack-plugin": "^3.5.2",
     "typescript": "^4.5.2",
