--- a/package.json
+++ b/package.json
@@ -30,12 +30,14 @@
     "@typescript-eslint/eslint-plugin": "^4.29.1",
     "@typescript-eslint/parser": "^4.29.1",
     "copy-webpack-plugin": "^8.1.1",
+    "css-loader": "^6.7.3",
     "eslint": "^7.32.0",
     "html-webpack-plugin": "^5.5.0",
     "husky": "^7.0.0",
     "jest": "^27.5.1",
     "json2typescript": "^1.5.0-rc.0",
     "prettier": "2.2.1",
+    "style-loader": "^3.3.1",
     "ts-jest": "^27.1.3",
     "ts-loader": "^8.3.0",
     "tsconfig-paths-webpack-plugin": "^3.5.2",
